# furumi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: PKGBUILD  build.yml  furumi.install  rust.yml
.github/workflows/furumi/: FETCH_HEAD  config  packed-refs
.github/workflows/furumi/objects/pack/: pack-83c1e2a582380abaea17950b7471d3e81e01ee9d.idx  pack-83c1e2a582380abaea17950b7471d3e81e01ee9d.pack
assets/: furumi.service  furumi.yml  umount.sh
src/: client.rs  config.rs  filesystem.rs  http.rs  main.rs
