[package]
name = "furumi"
version = "1.0.0"
authors = ["AB <ultradesu@hexor.ru>"]
edition = "2018"
license = "WTFPL"
readme = "README.md"
description = """\
Written safely in Rust, read-only FUSE FS on top of  \
NGINX JSON autoindex."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyfuse = "0.3.3"
polyfuse-tokio = "0.2"
tracing-subscriber = "0.2.5"
libc = "0.2.69"
anyhow = "1"
slab = "0.4"
tracing = "0.1"
tracing-futures = "0.2"
futures = "0.3"
futures-intrusive = "0.2"

# config deps
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = {version = "2.33", features = ["yaml"]}
serde_json = "1.0"
#percent-encoding = "2.1"
#time = "0.1"
chrono = "0.4"
env_logger = "0.7"
log = { version = "^0.4.5", features = ["std"] }
#size_format = "1.0"
base64 = "0.12"
#ctrlc = "3.1"
config = "0.9"
itertools = "0.9"
http = "0.2"

[dev-dependencies.tokio]
version = "0.2"
features = [ "full" ]

